Fix footer z-index

--- a/src/style/main.less
+++ b/src/style/main.less
@@ -45,6 +45,7 @@ html {
       margin: 0 auto;
       left: 0;
       right: 0;
+      z-index: -1;
     }
   }
 }
